--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,6 @@
-# content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38, flake8
+envlist = py39 
 
 [testenv]
-# install pytest in the virtualenv where commands will be executed
-; deps =
-    ; -rrequirements.txt
 commands =
     python setup.py install
-    pytest
